--- a/player.html
+++ b/player.html
@@ -1,53 +1,67 @@
-<!DOCTYPE html>
-<html lang="de">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Player — Musik‑Quiz</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <section class="card" id="join">
-    <h1>🎵 Musik‑Quiz — Spieler</h1>
-    <div class="grid">
-      <input id="code" type="text" placeholder="Raum-Code (z. B. ABC12)">
-      <input id="name" type="text" placeholder="Dein Name">
-    </div>
-    <div class="row"><button id="joinBtn" class="primary">Beitreten</button></div>
-  </section>
+<!doctype html>
 
-  <section class="card hidden" id="room">
-    <h2>Raum: <span id="roomCode" class="badge"></span></h2>
-    <div class="status" id="status">Warte auf Rundestart…</div>
 
-    <div class="flex">
-      <div class="col">
-        <h3>Fortschritt</h3>
-        <div id="progressBox"></div>
-        <div class="row">
-          <button id="buzz" class="primary">BUZZ!</button>
-          <button id="btnVoteNext">➡️ Weiter (Next)</button>
-        </div>
-        <div class="small" id="nextInfo"></div>
-      </div>
+function renderRounds(playlists, activeIndex){
+roundList.innerHTML = '';
+playlists.forEach((pl, i) => {
+const div = document.createElement('div');
+div.className = 'item' + (i===activeIndex?' active':'');
+div.textContent = pl.name || `Playlist ${i+1}`;
+roundList.appendChild(div);
+});
+}
+function renderSongs(total, active, currentTitle){
+songList.innerHTML = '';
+for (let i = total; i >= 1; i--) {
+const idxFromTop = i - 1;
+const div = document.createElement('div');
+div.className = 'song' + (idxFromTop===active ? ' active' : '');
+const left = document.createElement('div'); left.textContent = `Song ${i}`;
+const right = document.createElement('div'); right.className='badge';
+if (idxFromTop===active && currentTitle) right.textContent = currentTitle;
+div.appendChild(left); div.appendChild(right);
+songList.appendChild(div);
+}
+}
 
-      <div class="col">
-        <h3>Spieler & Punkte</h3>
-        <table class="table">
-          <thead><tr><th>Spieler</th><th>Punkte</th></tr></thead>
-          <tbody id="scoreRows"></tbody>
-        </table>
-      </div>
-    </div>
 
-    <div id="firstBanner" class="banner info hidden"></div>
-    <div id="resultBanner" class="banner hidden"></div>
+socket.on('player:join-result', (r) => {
+if (r.ok){ el('#roomCode').textContent = r.code; el('#status').textContent = 'Beigetreten als ' + r.name; }
+else { el('#status').textContent = 'Fehler: ' + r.error; }
+});
 
-    <audio id="music" preload="auto"></audio>
-  </section>
 
-  <script src="/socket.io/socket.io.js"></script>
-  <script type="module" src="shared.js"></script>
-  <script type="module" src="player.js"></script>
+socket.on('ui:round-update', ({ progress, playlists, activeRound, activeSong, currentTitle }) => {
+el('#roundName').textContent = progress.roundName;
+renderRounds(playlists, activeRound);
+renderSongs(progress.songTotal, activeSong, currentTitle||'');
+});
+
+
+socket.on('round:prepare', ({ src, title }) => {
+audio.src = src || '';
+el('#currentTitle').textContent = title || '–';
+});
+socket.on('audio:play', () => audio.play().catch(()=>{}));
+socket.on('audio:pause', () => audio.pause());
+
+
+socket.on('buzz:first', ({ name }) => {
+el('#status').textContent = `🔔 ${name} war zuerst!`;
+});
+
+
+socket.on('room:update', ({ players }) => {
+const list = el('#players'); list.innerHTML = '';
+players.forEach(p => {
+const div = document.createElement('div'); div.className='player';
+div.innerHTML = `<span>${p.name}</span>`;
+list.appendChild(div);
+});
+});
+
+
+socket.on('status', (t) => el('#status').textContent = t);
+</script>
 </body>
 </html>
