--- a/public/player.html
+++ b/public/player.html
@@ -1,65 +1,117 @@
-<!doctype html>
-function renderRounds(playlists, activeIndex){
-roundList.innerHTML = '';
-playlists.forEach((pl, i) => {
-const div = document.createElement('div');
-div.className = 'item' + (i===activeIndex?' active':'');
-div.textContent = pl.name || `Playlist ${i+1}`;
-roundList.appendChild(div);
-});
-}
-function renderSongs(total, active, currentTitle){
-songList.innerHTML = '';
-for (let i = total; i >= 1; i--) {
-const idxFromTop = i - 1;
-const div = document.createElement('div');
-div.className = 'song' + (idxFromTop===active ? ' active' : '');
-const left = document.createElement('div'); left.textContent = `Song ${i}`;
-const right = document.createElement('div'); right.className='badge';
-if (idxFromTop===active && currentTitle) right.textContent = currentTitle;
-div.appendChild(left); div.appendChild(right);
-songList.appendChild(div);
-}
-}
+<!-- muss vor deinem Script stehen -->
+<script src="/socket.io/socket.io.js"></script>
 
+<script>
+  // Basics
+  const socket   = io();
+  const el       = (s) => document.querySelector(s);
+  const roundList= el('#roundList');
+  const songList = el('#songList');
+  const audio    = el('#audio');
 
-socket.on('player:join-result', (r) => {
-if (r.ok){ el('#roomCode').textContent = r.code; el('#status').textContent = 'Beigetreten als ' + r.name; }
-else { el('#status').textContent = 'Fehler: ' + r.error; }
-});
+  // Runden links
+  function renderRounds(playlists = [], activeIndex = 0){
+    if (!roundList) return;
+    roundList.innerHTML = '';
+    playlists.forEach((pl, i) => {
+      const div = document.createElement('div');
+      div.className = 'item' + (i===activeIndex ? ' active' : '');
+      div.textContent = pl.name || `Playlist ${i+1}`;
+      roundList.appendChild(div);
+    });
+  }
 
+  // Songs Mitte (N → 1), aktiver Song zeigt Titel
+  function renderSongs(total = 0, active = 0, currentTitle = ''){
+    if (!songList) return;
+    songList.innerHTML = '';
+    for (let i = total; i >= 1; i--) {
+      const idxFromTop = i - 1; // 0..N-1 (Song N zuerst)
+      const div  = document.createElement('div');
+      div.className = 'song' + (idxFromTop===active ? ' active' : '');
 
-socket.on('ui:round-update', ({ progress, playlists, activeRound, activeSong, currentTitle }) => {
-el('#roundName').textContent = progress.roundName;
-renderRounds(playlists, activeRound);
-renderSongs(progress.songTotal, activeSong, currentTitle||'');
-});
+      const left  = document.createElement('div');
+      left.textContent = `Song ${i}`;
 
+      const right = document.createElement('div');
+      right.className = 'badge';
+      if (idxFromTop===active && currentTitle) right.textContent = currentTitle;
 
-socket.on('round:prepare', ({ src, title }) => {
-audio.src = src || '';
-el('#currentTitle').textContent = title || '–';
-});
-socket.on('audio:play', () => audio.play().catch(()=>{}));
-socket.on('audio:pause', () => audio.pause());
+      div.appendChild(left);
+      div.appendChild(right);
+      songList.appendChild(div);
+    }
+  }
 
+  // Spieler-/Punkte-Liste rechts
+  function renderPlayers(players = [], scores = {}){
+    const wrap = el('#players');
+    if (!wrap) return;
+    wrap.innerHTML = '';
+    players.forEach(p => {
+      const row = document.createElement('div');
+      row.className = 'player';
+      row.innerHTML = `<span>${p.name}</span><strong>${scores[p.id] || 0}</strong>`;
+      wrap.appendChild(row);
+    });
+  }
 
-socket.on('buzz:first', ({ name }) => {
-el('#status').textContent = `🔔 ${name} war zuerst!`;
-});
+  // Join-Ergebnis
+  socket.on('player:join-result', (r) => {
+    if (r.ok){
+      const codeEl = el('#roomCode');
+      if (codeEl) codeEl.textContent = r.code;
+      const st = el('#status');
+      if (st) st.textContent = 'Beigetreten als ' + r.name;
+    } else {
+      const st = el('#status');
+      if (st) st.textContent = 'Fehler: ' + r.error;
+    }
+  });
 
+  // Runde/Anzeige aktualisieren (kommt vom Server, wenn Moderator Runde/Song wechselt)
+  socket.on('ui:round-update', ({ progress, playlists, activeRound, activeSong, currentTitle }) => {
+    const rn = el('#roundName');
+    if (rn) rn.textContent = progress.roundName;
+    renderRounds(playlists, activeRound);
+    renderSongs(progress.songTotal, activeSong, currentTitle || '');
+  });
 
-socket.on('room:update', ({ players }) => {
-const list = el('#players'); list.innerHTML = '';
-players.forEach(p => {
-const div = document.createElement('div'); div.className='player';
-div.innerHTML = `<span>${p.name}</span>`;
-list.appendChild(div);
-});
-});
+  // Track laden + Titel setzen
+  socket.on('round:prepare', ({ src, title }) => {
+    if (audio) audio.src = src || '';
+    const ct = el('#currentTitle');
+    if (ct) ct.textContent = title || '–';
+  });
 
+  // Audio steuern
+  socket.on('audio:play', () => { try { audio && audio.play(); } catch(e){} });
+  socket.on('audio:pause', () => { try { audio && audio.pause(); } catch(e){} });
 
-socket.on('status', (t) => el('#status').textContent = t);
+  // Buzz-Hinweis
+  socket.on('buzz:first', ({ name }) => {
+    const st = el('#status');
+    if (st) st.textContent = `🔔 ${name} war zuerst!`;
+  });
+
+  // Spieler- und Punktelisten aktuell halten
+  socket.on('room:update', ({ players, scores }) => {
+    window._players = players;          // merken für spätere scores:update
+    renderPlayers(players, scores || {}); 
+  });
+  socket.on('scores:update', (scores) => {
+    renderPlayers(window._players || [], scores || {});
+  });
+
+  // Nur den Rundennamen refreshen (optional)
+  socket.on('progress:update', (p) => {
+    const rn = el('#roundName');
+    if (rn) rn.textContent = p.roundName;
+  });
+
+  // Statuszeile
+  socket.on('status', (t) => {
+    const st = el('#status');
+    if (st) st.textContent = t;
+  });
 </script>
-</body>
-</html>
