--- a/public/player.html
+++ b/public/player.html
@@ -1,117 +1,176 @@
-<!-- muss vor deinem Script stehen -->
-<script src="/socket.io/socket.io.js"></script>
+<!doctype html>
+<html lang="de">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Musik-Quiz – Spieler</title>
+  <link rel="stylesheet" href="/style.css" />
+  <!-- Socket.IO muss vor deinem Script geladen werden -->
+  <script src="/socket.io/socket.io.js"></script>
+</head>
+<body>
+  <div class="layout">
+    <!-- Linke Spalte: Runden/Playlists -->
+    <aside class="sidebar">
+      <h3 class="h">Playlists (Runden)</h3>
+      <div id="roundList" class="list"></div>
+      <div class="status">Du bist in Raum <code id="roomCode" class="small">—</code></div>
+    </aside>
 
-<script>
-  // Basics
-  const socket   = io();
-  const el       = (s) => document.querySelector(s);
-  const roundList= el('#roundList');
-  const songList = el('#songList');
-  const audio    = el('#audio');
+    <!-- Mitte: Songs & Steuerung -->
+    <main class="main">
+      <h3 class="h">Runde: <span id="roundName">–</span></h3>
+      <div class="status">Aktueller Song: <strong id="currentTitle">–</strong></div>
 
-  // Runden links
-  function renderRounds(playlists = [], activeIndex = 0){
-    if (!roundList) return;
-    roundList.innerHTML = '';
-    playlists.forEach((pl, i) => {
-      const div = document.createElement('div');
-      div.className = 'item' + (i===activeIndex ? ' active' : '');
-      div.textContent = pl.name || `Playlist ${i+1}`;
-      roundList.appendChild(div);
-    });
-  }
+      <div id="songList" class="songs"></div>
 
-  // Songs Mitte (N → 1), aktiver Song zeigt Titel
-  function renderSongs(total = 0, active = 0, currentTitle = ''){
-    if (!songList) return;
-    songList.innerHTML = '';
-    for (let i = total; i >= 1; i--) {
-      const idxFromTop = i - 1; // 0..N-1 (Song N zuerst)
-      const div  = document.createElement('div');
-      div.className = 'song' + (idxFromTop===active ? ' active' : '');
+      <div class="row" style="margin-top:12px;">
+        <input id="inpCode" placeholder="Raumcode" style="padding:10px;border-radius:10px;border:0;background:#0b1220;color:#fff;" />
+        <input id="inpName" placeholder="Dein Name" style="padding:10px;border-radius:10px;border:0;background:#0b1220;color:#fff;" />
+        <button id="btnJoin" class="primary">Beitreten</button>
+        <button id="btnBuzz">🔔 Buzz</button>
+        <button id="btnVoteNext">⏭️ Vote Next</button>
+      </div>
 
-      const left  = document.createElement('div');
-      left.textContent = `Song ${i}`;
+      <audio id="audio" controls></audio>
+      <div id="status" class="status"></div>
+    </main>
 
-      const right = document.createElement('div');
-      right.className = 'badge';
-      if (idxFromTop===active && currentTitle) right.textContent = currentTitle;
+    <!-- Rechte Spalte: Spieler & Punkte -->
+    <aside class="right">
+      <h3 class="h">Alle Spieler</h3>
+      <div id="players" class="score"></div>
+    </aside>
+  </div>
 
-      div.appendChild(left);
-      div.appendChild(right);
-      songList.appendChild(div);
+  <script>
+    // Basics/Refs
+    const socket    = io();
+    const el        = (s) => document.querySelector(s);
+    const roundList = el('#roundList');
+    const songList  = el('#songList');
+    const audio     = el('#audio');
+
+    // Buttons
+    const btnJoin     = el('#btnJoin');
+    const btnBuzz     = el('#btnBuzz');
+    const btnVoteNext = el('#btnVoteNext');
+
+    // Inputs
+    const inpCode = el('#inpCode');
+    const inpName = el('#inpName');
+
+    // Aktionen
+    btnJoin.onclick     = () => socket.emit('player:join', { code: inpCode.value, name: inpName.value });
+    btnBuzz.onclick     = () => socket.emit('player:buzz');
+    btnVoteNext.onclick = () => socket.emit('player:vote-next');
+
+    // Runden links rendern
+    function renderRounds(playlists = [], activeIndex = 0){
+      if (!roundList) return;
+      roundList.innerHTML = '';
+      playlists.forEach((pl, i) => {
+        const div = document.createElement('div');
+        div.className = 'item' + (i === activeIndex ? ' active' : '');
+        div.textContent = pl.name || `Playlist ${i+1}`;
+        roundList.appendChild(div);
+      });
     }
-  }
 
-  // Spieler-/Punkte-Liste rechts
-  function renderPlayers(players = [], scores = {}){
-    const wrap = el('#players');
-    if (!wrap) return;
-    wrap.innerHTML = '';
-    players.forEach(p => {
-      const row = document.createElement('div');
-      row.className = 'player';
-      row.innerHTML = `<span>${p.name}</span><strong>${scores[p.id] || 0}</strong>`;
-      wrap.appendChild(row);
-    });
-  }
+    // Songs in der Mitte: N -> 1, aktiver Song zeigt Titel
+    function renderSongs(total = 0, active = 0, currentTitle = ''){
+      if (!songList) return;
+      songList.innerHTML = '';
+      for (let i = total; i >= 1; i--) {
+        const idxFromTop = i - 1; // 0..N-1 (Song N zuerst)
+        const div  = document.createElement('div');
+        div.className = 'song' + (idxFromTop === active ? ' active' : '');
 
-  // Join-Ergebnis
-  socket.on('player:join-result', (r) => {
-    if (r.ok){
-      const codeEl = el('#roomCode');
-      if (codeEl) codeEl.textContent = r.code;
-      const st = el('#status');
-      if (st) st.textContent = 'Beigetreten als ' + r.name;
-    } else {
-      const st = el('#status');
-      if (st) st.textContent = 'Fehler: ' + r.error;
+        const left  = document.createElement('div');
+        left.textContent = `Song ${i}`;
+
+        const right = document.createElement('div');
+        right.className = 'badge';
+        if (idxFromTop === active && currentTitle) right.textContent = currentTitle;
+
+        div.appendChild(left);
+        div.appendChild(right);
+        songList.appendChild(div);
+      }
     }
-  });
 
-  // Runde/Anzeige aktualisieren (kommt vom Server, wenn Moderator Runde/Song wechselt)
-  socket.on('ui:round-update', ({ progress, playlists, activeRound, activeSong, currentTitle }) => {
-    const rn = el('#roundName');
-    if (rn) rn.textContent = progress.roundName;
-    renderRounds(playlists, activeRound);
-    renderSongs(progress.songTotal, activeSong, currentTitle || '');
-  });
+    // Spieler- und Punkteliste rechts
+    function renderPlayers(players = [], scores = {}){
+      const wrap = el('#players');
+      if (!wrap) return;
+      wrap.innerHTML = '';
+      players.forEach(p => {
+        const row = document.createElement('div');
+        row.className = 'player';
+        row.innerHTML = `<span>${p.name}</span><strong>${scores[p.id] || 0}</strong>`;
+        wrap.appendChild(row);
+      });
+    }
 
-  // Track laden + Titel setzen
-  socket.on('round:prepare', ({ src, title }) => {
-    if (audio) audio.src = src || '';
-    const ct = el('#currentTitle');
-    if (ct) ct.textContent = title || '–';
-  });
+    // --- Socket Events ---
 
-  // Audio steuern
-  socket.on('audio:play', () => { try { audio && audio.play(); } catch(e){} });
-  socket.on('audio:pause', () => { try { audio && audio.pause(); } catch(e){} });
+    // Join-Ergebnis
+    socket.on('player:join-result', (r) => {
+      const st = el('#status');
+      if (r.ok){
+        el('#roomCode') && (el('#roomCode').textContent = r.code);
+        st && (st.textContent = 'Beigetreten als ' + r.name);
+      } else {
+        st && (st.textContent = 'Fehler: ' + r.error);
+      }
+    });
 
-  // Buzz-Hinweis
-  socket.on('buzz:first', ({ name }) => {
-    const st = el('#status');
-    if (st) st.textContent = `🔔 ${name} war zuerst!`;
-  });
+    // Runde/Anzeige aktualisieren, wenn Moderator wechselt
+    socket.on('ui:round-update', ({ progress, playlists, activeRound, activeSong, currentTitle }) => {
+      const rn = el('#roundName');
+      if (rn) rn.textContent = progress.roundName;
+      renderRounds(playlists, activeRound);
+      renderSongs(progress.songTotal, activeSong, currentTitle || '');
+    });
 
-  // Spieler- und Punktelisten aktuell halten
-  socket.on('room:update', ({ players, scores }) => {
-    window._players = players;          // merken für spätere scores:update
-    renderPlayers(players, scores || {}); 
-  });
-  socket.on('scores:update', (scores) => {
-    renderPlayers(window._players || [], scores || {});
-  });
+    // Neuen Track laden + Titel setzen
+    socket.on('round:prepare', ({ src, title }) => {
+      if (audio) audio.src = src || '';
+      const ct = el('#currentTitle');
+      if (ct) ct.textContent = title || '–';
+    });
 
-  // Nur den Rundennamen refreshen (optional)
-  socket.on('progress:update', (p) => {
-    const rn = el('#roundName');
-    if (rn) rn.textContent = p.roundName;
-  });
+    // Audio steuern
+    socket.on('audio:play', () => { try { audio && audio.play(); } catch(e){} });
+    socket.on('audio:pause', () => { try { audio && audio.pause(); } catch(e){} });
 
-  // Statuszeile
-  socket.on('status', (t) => {
-    const st = el('#status');
-    if (st) st.textContent = t;
-  });
-</script>
+    // Buzz-Hinweis
+    socket.on('buzz:first', ({ name }) => {
+      const st = el('#status');
+      if (st) st.textContent = `🔔 ${name} war zuerst!`;
+    });
+
+    // Spieler- & Punkte-Updates
+    socket.on('room:update', ({ players, scores }) => {
+      window._players = players;
+      renderPlayers(players, scores || {});
+    });
+
+    socket.on('scores:update', (scores) => {
+      renderPlayers(window._players || [], scores || {});
+    });
+
+    // Nur Rundennamen refreshen (optional)
+    socket.on('progress:update', (p) => {
+      const rn = el('#roundName');
+      if (rn) rn.textContent = p.roundName;
+    });
+
+    // Statusleiste
+    socket.on('status', (t) => {
+      const st = el('#status');
+      if (st) st.textContent = t;
+    });
+  </script>
+</body>
+</html>
