--- a/public/player.html
+++ b/public/player.html
@@ -164,9 +164,9 @@
     // Neuen Track laden + Titel setzen → Buzz freigeben
     socket.on('round:prepare', ({ src, title }) => {
       if (audio) audio.src = src || '';
-      const ct = el('#currentTitle');
-      if (ct) ct.textContent = title || '–';
-      updateBuzz(true); // bei neuem Track wieder freigeben
+      const ct = el('#currentTitle'); if (ct) ct.textContent = title || '–';
+      updateBuzz(true);
+      const st = el('#status'); if (st) st.textContent = '';
     });
 
     // Audio nur vom Server
@@ -186,24 +186,10 @@
       if (st) st.textContent = `🔔 ${name} war zuerst!`;
       updateBuzz(false);
     });
-   // Buzzer freigeben → Status zurücksetzen
-     socket.on('buzz:unlock', () => {
-     updateBuzz(true);
-     const st = el('#status');
-     if (st) st.textContent = '';
+    socket.on('buzz:unlock', () => {
+      updateBuzz(true);
+      const st = el('#status'); if (st) st.textContent = '';
     });
-
-// Neue Runde vorbereiten → alten Status löschen
-socket.on('round:prepare', ({ src, title }) => {
-  if (audio) audio.src = src || '';
-  const ct = el('#currentTitle');
-  if (ct) ct.textContent = title || '–';
-  updateBuzz(true);
-
-  const st = el('#status');
-  if (st) st.textContent = '';
-});
-
 
     // Spieler- & Punkte-Updates
     socket.on('room:update', ({ players, scores }) => {
