--- a/public/player.html
+++ b/public/player.html
@@ -164,9 +164,9 @@
     // Neuen Track laden + Titel setzen → Buzz freigeben
     socket.on('round:prepare', ({ src, title }) => {
       if (audio) audio.src = src || '';
-      const ct = el('#currentTitle'); if (ct) ct.textContent = title || '–';
-      updateBuzz(true);
-      const st = el('#status'); if (st) st.textContent = '';
+      const ct = el('#currentTitle');
+      if (ct) ct.textContent = title || '–';
+      updateBuzz(true); // bei neuem Track wieder freigeben
     });
 
     // Audio nur vom Server
@@ -188,7 +188,6 @@
     });
     socket.on('buzz:unlock', () => {
       updateBuzz(true);
-      const st = el('#status'); if (st) st.textContent = '';
     });
 
     // Spieler- & Punkte-Updates
